# ccapi

./: CMakeLists.txt
DataLoader/: CryptoFeed.py
app/script/: download_historical_market_data.py
example/: CMakeLists.txt
example/src/market_data_advanced_subscription/: CMakeLists.txt  main.cpp
